      values that, while reasonable, could slow bootstrapping.  Implements
      proposal 135.  Patch from Karsten.

  o Minor features:
    - Allow OpenSSL to use dynamic locks if it wants.
    - When building a consensus do not include routers that are down.
      This will cut down 30% to 40% on consensus size.  Implements
      proposal 138.

  o Bugfixes:
    - Asking for a conditional consensus at .../consensus/<fingerprints>
      would crash a dirserver if it did not already have a consensus.

Changes in version 0.2.1.1-alpha - 2008-06-13
  o Major features:
    - More work on making our TLS handshake blend in: modify the list
      of ciphers advertised by OpenSSL in client mode to even more
      closely resemble a common web browser. We cheat a little so that
      we can advertise ciphers that the locally installed OpenSSL doesn't
      know about.
    - Start sending "bootstrap phase" status events to the controller,
      so it can keep the user informed of progress fetching directory
      information and establishing circuits. Also inform the controller
      if we think we're stuck at a particular bootstrap phase. Implements
      proposal 137.
    - Resume using OpenSSL's RAND_poll() for better (and more portable)
      cross-platform entropy collection again. We used to use it, then
      stopped using it because of a bug that could crash systems that
      called RAND_poll when they had a lot of fds open. It looks like the
      bug got fixed in late 2006. Our new behavior is to call RAND_poll()
      at startup, and to call RAND_poll() when we reseed later only if
      we have a non-buggy OpenSSL version.

  o Major bugfixes:
    - When we choose to abandon a new entry guard because we think our
      older ones might be better, close any circuits pending on that
      new entry guard connection. This fix should make us recover much
      faster when our network is down and then comes back. Bugfix on
      0.1.2.8-beta; found by lodger.
